--- a/app/public/main-menu.html
+++ b/app/public/main-menu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,40 @@
 </head>
 
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <div class="centered-flex">
+        <div class="bee">
+            <div class="bee__body">
+                <div>
+                    <div class="bee__body__stripes"></div>
+                    <div class="bee__body__stripes"></div>
+                    <div class="bee__body__stripes"></div>
+                </div>
+            </div>
+            <div>
+                <div class="bee__eyes --right-eye"></div>
+                <div class="bee__eyes --left-eye"></div>
+            </div>
+            <div class="bee__wings">
+                <div class="bee__wings__wing"></div>
+                <div class="bee__wings__wing"></div>
+            </div>
+            <div>
+                <div class="bee__antena"></div>
+                <div class="bee__antena"></div>
+            </div>
+        </div>
+    </div>
+        <div class="flower">
+            <div class="flower__bud">
+                <div class="flower__bud__head"></div>
+                <div class="flower__bud__petals"></div>
+                <div class="flower__bud__petals"></div>
+                <div class="flower__bud__petals"></div>
+            </div>
+            <div class="flower__stem"></div>
+        </div>
+    </div>
 </body>
+
 </html>
